20090122	Merging in fdiv.sss and fadd.dsd from the main trunk.
20090123	NetBSD/hpcmips can now be installed and run using serial
		console (i.e. without -X), in addition to using the
		framebuffer.

==============  RELEASE 0.4.7.1  ==============

20090215	Updating the guest OS page for HelenOS 0.4.0.
20090513	Fixing the MIPS tne, teq, tge, tgeu, tlt, and tltu instructions
		to allow non-zero "code" values.
		Adding a new Linux/Malta "variant 2" entry to the unsupported
		guest OS page.
20090518	Changing the 8253 interrupt mechanism to assert interrupts
		regardless of "mode" bits, causing Linux/Malta to get further.
		Hacking on piix4 a bit to attempt to please Linux/Malta;
		interrupts are lost.
20090610	Making configuration files work again! (Thanks to Wu Kan for
		noticing this bug.)
20090611	Documentation updates (NetBSD 5 etc).
20090621	Adding a hack for the pcc2 PSCALEADJ register, making it
		possible to install and run OpenBSD/mvme88k 4.5.
		NetBSD/evbmips, /sgimips, and /cobalt 5.0 have been verified
		to work.

==============  RELEASE 0.4.7.2  ==============

20090626	Attempting to switch from C to C++ (_WITHOUT_ starting over
		from scratch). Step 1: Rename all .c files to .cc. 2. Rename
		all occurances of 'template' and 'class' to other things.
		Step 3: Fix malloc/realloc cast errors.
20090627	Continuing on the C to C++ switch.
		Updating the OpenBSD/mvme88k regression test expect script
		from 4.4 to 4.5.
		Everything now builds with "make -j X".
20090628	Moving src/*.cc into a new directory, src/main/.
		Finally adding the "make install" target (again).
		Moving TODO and RELEASE notes to doc/.
		Adding Doxygen documentation generation (again).
20090703	Moving more C++ code from the old branch into the main trunk.
		(UnitTest, Component*, StateVariable, debug_new, ...)
		Removing bogus/unfinished archs (Alpha, SPARC, M32R) and
		the skeleton "userland emulation".
20090704	Moving thirdparty includes into src/include/thirdparty/.